// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TextInput: type Url renders disabled 1`] = `
<div
  className="flex gap-4 items-end"
>
  <div
    className="m-4"
  >
    <div
      className="sc-khrHlC eGqrHA"
      disabled={true}
    >
      <label
        className="sc-hkWWFD bKwDUG"
      >
        medium
      </label>
      <input
        className="sc-ehmXTo lhzCTw"
        disabled={true}
        placeholder=" "
        type="url"
        value="https://sportsbet.io"
      />
      <p
        className="sc-hoIcGJ eMDhsJ"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="sc-khrHlC eGqrHA"
      disabled={true}
    >
      <label
        className="sc-hkWWFD bKwDUG"
      >
        large
      </label>
      <input
        className="sc-ehmXTo ixbpuf"
        disabled={true}
        placeholder=" "
        type="url"
        value="https://sportsbet.io"
      />
      <p
        className="sc-hoIcGJ eMDhsJ"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="sc-khrHlC eGqrHA"
      disabled={true}
    >
      <div
        className="sc-bndzKH cnwBQL"
      >
        <input
          className="sc-ehmXTo wRyOh"
          disabled={true}
          placeholder=" "
          type="url"
          value="https://sportsbet.io"
        />
        <label
          className="sc-jveewi jlDwJo"
        >
          xlarge
        </label>
      </div>
      <p
        className="sc-hoIcGJ eMDhsJ"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
</div>
`;

exports[`TextInput: type Url renders error 1`] = `
<div
  className="flex gap-4 items-end"
>
  <div
    className="m-4"
  >
    <div
      className="sc-khrHlC jNqXzC"
    >
      <label
        className="sc-hkWWFD bKwDUG"
      >
        medium
      </label>
      <input
        className="sc-ehmXTo hqSucy"
        placeholder="e.g. https://sportsbet.io"
        type="url"
      />
      <p
        className="sc-hoIcGJ emgWzV"
        role="alert"
      >
        Error message
      </p>
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="sc-khrHlC jNqXzC"
    >
      <label
        className="sc-hkWWFD bKwDUG"
      >
        large
      </label>
      <input
        className="sc-ehmXTo lesvOp"
        placeholder="e.g. https://sportsbet.io"
        type="url"
      />
      <p
        className="sc-hoIcGJ emgWzV"
        role="alert"
      >
        Error message
      </p>
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="sc-khrHlC jNqXzC"
    >
      <div
        className="sc-bndzKH cnwBQL"
      >
        <input
          className="sc-ehmXTo gprDP"
          placeholder="e.g. https://sportsbet.io"
          type="url"
        />
        <label
          className="sc-jveewi jlDwJo"
        >
          xlarge
        </label>
      </div>
      <p
        className="sc-hoIcGJ emgWzV"
        role="alert"
      >
        Error message
      </p>
    </div>
  </div>
</div>
`;

exports[`TextInput: type Url renders readOnly 1`] = `
<div
  className="flex gap-4 items-end"
>
  <div
    className="m-4"
  >
    <div
      className="sc-khrHlC jNqXzC"
    >
      <label
        className="sc-hkWWFD bKwDUG"
      >
        medium
      </label>
      <input
        className="sc-ehmXTo lhzCTw"
        placeholder=" "
        readOnly={true}
        type="url"
        value="https://sportsbet.io"
      />
      <p
        className="sc-hoIcGJ eMDhsJ"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="sc-khrHlC jNqXzC"
    >
      <label
        className="sc-hkWWFD bKwDUG"
      >
        large
      </label>
      <input
        className="sc-ehmXTo ixbpuf"
        placeholder=" "
        readOnly={true}
        type="url"
        value="https://sportsbet.io"
      />
      <p
        className="sc-hoIcGJ eMDhsJ"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="sc-khrHlC jNqXzC"
    >
      <div
        className="sc-bndzKH cnwBQL"
      >
        <input
          className="sc-ehmXTo wRyOh"
          placeholder=" "
          readOnly={true}
          type="url"
          value="https://sportsbet.io"
        />
        <label
          className="sc-jveewi jlDwJo"
        >
          xlarge
        </label>
      </div>
      <p
        className="sc-hoIcGJ eMDhsJ"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
</div>
`;

exports[`TextInput: type Url renders with hint 1`] = `
<div
  className="flex gap-4 items-end"
>
  <div
    className="m-4"
  >
    <div
      className="sc-khrHlC jNqXzC"
    >
      <label
        className="sc-hkWWFD bKwDUG"
      >
        medium
      </label>
      <input
        className="sc-ehmXTo lhzCTw"
        placeholder="e.g. https://sportsbet.io"
        type="url"
      />
      <p
        className="sc-hoIcGJ eMDhsJ"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="sc-khrHlC jNqXzC"
    >
      <label
        className="sc-hkWWFD bKwDUG"
      >
        large
      </label>
      <input
        className="sc-ehmXTo ixbpuf"
        placeholder="e.g. https://sportsbet.io"
        type="url"
      />
      <p
        className="sc-hoIcGJ eMDhsJ"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="sc-khrHlC jNqXzC"
    >
      <div
        className="sc-bndzKH cnwBQL"
      >
        <input
          className="sc-ehmXTo wRyOh"
          placeholder="e.g. https://sportsbet.io"
          type="url"
        />
        <label
          className="sc-jveewi jlDwJo"
        >
          xlarge
        </label>
      </div>
      <p
        className="sc-hoIcGJ eMDhsJ"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
</div>
`;

exports[`TextInput: type Url renders with label 1`] = `
<div
  className="flex gap-4 items-end"
>
  <div
    className="m-4"
  >
    <div
      className="sc-khrHlC jNqXzC"
    >
      <label
        className="sc-hkWWFD bKwDUG"
      >
        medium
      </label>
      <input
        className="sc-ehmXTo lhzCTw"
        placeholder="e.g. https://sportsbet.io"
        type="url"
      />
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="sc-khrHlC jNqXzC"
    >
      <label
        className="sc-hkWWFD bKwDUG"
      >
        large
      </label>
      <input
        className="sc-ehmXTo ixbpuf"
        placeholder="e.g. https://sportsbet.io"
        type="url"
      />
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="sc-khrHlC jNqXzC"
    >
      <div
        className="sc-bndzKH cnwBQL"
      >
        <input
          className="sc-ehmXTo wRyOh"
          placeholder="e.g. https://sportsbet.io"
          type="url"
        />
        <label
          className="sc-jveewi jlDwJo"
        >
          xlarge
        </label>
      </div>
    </div>
  </div>
</div>
`;

exports[`TextInput: type Url renders with label RTL 1`] = `
<div
  className="flex gap-4 items-end"
>
  <div
    className="m-4"
  >
    <div
      className="sc-khrHlC jNqXzC"
    >
      <label
        className="sc-hkWWFD bKwDUG"
        dir="rtl"
      >
        medium
      </label>
      <input
        className="sc-ehmXTo lhzCTw"
        dir="rtl"
        placeholder="e.g. https://sportsbet.io"
        type="url"
      />
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="sc-khrHlC jNqXzC"
    >
      <label
        className="sc-hkWWFD bKwDUG"
        dir="rtl"
      >
        large
      </label>
      <input
        className="sc-ehmXTo ixbpuf"
        dir="rtl"
        placeholder="e.g. https://sportsbet.io"
        type="url"
      />
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="sc-khrHlC jNqXzC"
    >
      <div
        className="sc-bndzKH cnwBQL"
      >
        <input
          className="sc-ehmXTo wRyOh"
          dir="rtl"
          placeholder="e.g. https://sportsbet.io"
          type="url"
        />
        <label
          className="sc-jveewi cuNMtv"
        >
          xlarge
        </label>
      </div>
    </div>
  </div>
</div>
`;

exports[`TextInput: type Url renders without label 1`] = `
<div
  className="flex gap-4 items-end"
>
  <div
    className="m-4"
  >
    <div
      className="sc-khrHlC jNqXzC"
    >
      <input
        className="sc-ehmXTo lhzCTw"
        placeholder="medium"
        type="url"
      />
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="sc-khrHlC jNqXzC"
    >
      <input
        className="sc-ehmXTo ixbpuf"
        placeholder="large"
        type="url"
      />
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="sc-khrHlC jNqXzC"
    >
      <div
        className="sc-bndzKH cnwBQL"
      >
        <input
          className="sc-ehmXTo eYLOkw"
          placeholder="xlarge"
          type="url"
        />
        <label
          className="sc-jveewi jlDwJo"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`TextInput: type Url supports background colour 1`] = `
<div
  className="flex gap-4 items-end"
>
  <div
    className="m-4"
  >
    <div
      className="sc-khrHlC jNqXzC"
    >
      <label
        className="sc-hkWWFD bKwDUG"
      >
        medium
      </label>
      <input
        className="sc-ehmXTo dUMdXf"
        placeholder="e.g. https://sportsbet.io"
        type="url"
      />
      <p
        className="sc-hoIcGJ eMDhsJ"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="sc-khrHlC jNqXzC"
    >
      <label
        className="sc-hkWWFD bKwDUG"
      >
        large
      </label>
      <input
        className="sc-ehmXTo foSkkU"
        placeholder="e.g. https://sportsbet.io"
        type="url"
      />
      <p
        className="sc-hoIcGJ eMDhsJ"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="sc-khrHlC jNqXzC"
    >
      <div
        className="sc-bndzKH fUIiCE"
      >
        <input
          className="sc-ehmXTo wRyOh"
          placeholder="e.g. https://sportsbet.io"
          type="url"
        />
        <label
          className="sc-jveewi jlDwJo"
        >
          xlarge
        </label>
      </div>
      <p
        className="sc-hoIcGJ eMDhsJ"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
</div>
`;
